[package]
name = "test_pkcs12_kdf"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
cxx = "1.0.100"
encode_unicode = "1.0.0"
hex = "0.4.3"
sha2 = "0.10.7"
pkcs12 = { git="https://github.com/xemwebe/formats.git", branch="pkcs12_kdf", features=["alloc"] }
whirlpool = "0.10.4"

[build-dependencies]
cxx-build = "1.0"

